Always display vertical scrollbar to prevent content shifting

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,8 @@ html {
 }
 
 body {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: scroll;
   background: url("diag.png");
   font-family: $font-family;
 }
